@@ -1,5 +1,5 @@
 '\" t
-.\" Sccsid @(#)grep.1	1.32 (gritter) 12/8/04
+.\" Sccsid @(#)grep.1	1.33 (gritter) 12/17/04
 .\" Parts taken from grep(1), Unix 7th edition:
 .\" Copyright(C) Caldera International Inc. 2001-2002. All rights reserved.
 .\"
@@ -32,14 +32,14 @@
 .\" WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 .\" EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.TH GREP 1 "12/8/04" "Heirloom Toolchest" "User Commands"
+.TH GREP 1 "12/17/04" "Heirloom Toolchest" "User Commands"
 .SH NAME
 grep \- search a file for a pattern
 .SH SYNOPSIS
 .HP
 .ad l
 .nh
-\fB/usr/5bin/grep\fR [\fB\-bchilnrRsvw\fR]
+\fB/usr/5bin/grep\fR [\fB\-bchilnrRsvwz\fR]
 \fIpattern\fR [\fIfile\fR\ ...]
 .HP
 .PD 0
@@ -47,17 +47,17 @@ grep \- search a file for a pattern
 \fB/usr/5bin/posix/grep\fR [\fB\-E\fR|\fB\-F\fR]
 \fB\-e\fI\ pattern_list\fR\ ...
 [\fB\-f\fI\ pattern_file\fR] [\fB\-c\fR|\fB\-l\fR|\fB\-q\fR]
-[\fB\-bhinrRsvwx\fR] [\fIfile\fR\ ...]
+[\fB\-bhinrRsvwxz\fR] [\fIfile\fR\ ...]
 .HP
 .ad l
 \fB/usr/5bin/posix/grep\fR [\fB\-E\fR|\fB\-F\fR]
 \fB\-f\fI\ pattern_file\fR
 [\fB\-e\fI\ pattern_list\fR\ ...] [\fB\-c\fR|\fB\-l\fR|\fB\-q\fR]
-[\fB\-bhinrRsvwx\fR] [\fIfile\fR\ ...]
+[\fB\-bhinrRsvwxz\fR] [\fIfile\fR\ ...]
 .HP
 .ad l
 \fB/usr/5bin/posix/grep\fR [\fB\-E\fR|\fB\-F\fR]
-[\fB\-c\fR|\fB\-l\fR|\fB\-q\fR] [\fB\-bhinrRsvwx\fR]
+[\fB\-c\fR|\fB\-l\fR|\fB\-q\fR] [\fB\-bhinrRsvwxz\fR]
 \fIpattern_list\fR [\fIfile\fR\ ...]
 .br
 .PD
@@ -196,6 +196,17 @@ Only available if neither the
 nor the
 .I \-F
 option are also supplied.
+.TP
+.B \-z
+If an input file is found to be compressed with
+.IR compress (1),
+.IR gzip (1),
+or
+.IR bzip2 (1),
+the appropriate compression program is started,
+and
+.I grep
+searches for the pattern in its output.
 .SH "ENVIRONMENT VARIABLES"
 .TP
 .BR LANG ", " LC_ALL
